// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rater-rating-overview renders correctly (data loading) 1`] = `
[
  <div
    className="css-10gaqg9-SubHeader"
  >
    <div
      className="css-1vv8qb3"
      data-testid="custom-select"
    >
      <div
        className="css-0"
      >
        <div
          className="css-13s2sfk-Heading"
        >
          subheader__typ
        </div>
      </div>
      <div
        className="css-18vooac"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="custom-select css-b62m3t-container"
          onKeyDown={[Function]}
        >
          <span
            className="css-1f43avz-a11yText-A11yText"
            id="react-select-5-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            className="css-1f43avz-a11yText-A11yText"
          />
          <div
            className=" css-1l51fcv-control"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className=" css-1fdsijx-ValueContainer"
            >
              <div
                className="single-value css-1ry7giw-singleValue"
              >
                subheader__filter_by_all_entities
              </div>
              <input
                aria-autocomplete="list"
                aria-expanded={false}
                aria-haspopup={true}
                aria-readonly={true}
                className="css-mohuvp-dummyInput-DummyInput"
                disabled={false}
                id="react-select-5-input"
                inputMode="none"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                tabIndex={0}
                value=""
              />
            </div>
            <div
              className=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                className=" css-1uei4ir-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                className=" css-1xc3v61-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className="css-l0jg45-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-1vv8qb3"
      data-testid="custom-select"
    >
      <div
        className="css-0"
      >
        <div
          className="css-13s2sfk-Heading"
        >
          subheader__state
        </div>
      </div>
      <div
        className="css-18vooac"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="custom-select css-b62m3t-container"
          onKeyDown={[Function]}
        >
          <span
            className="css-1f43avz-a11yText-A11yText"
            id="react-select-6-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            className="css-1f43avz-a11yText-A11yText"
          />
          <div
            className=" css-1l51fcv-control"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className=" css-1fdsijx-ValueContainer"
            >
              <div
                className="single-value css-1ry7giw-singleValue"
              >
                subheader__filter_by_show_all
              </div>
              <input
                aria-autocomplete="list"
                aria-expanded={false}
                aria-haspopup={true}
                aria-readonly={true}
                className="css-mohuvp-dummyInput-DummyInput"
                disabled={false}
                id="react-select-6-input"
                inputMode="none"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                tabIndex={0}
                value=""
              />
            </div>
            <div
              className=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                className=" css-1uei4ir-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                className=" css-1xc3v61-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className="css-l0jg45-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-1vv8qb3"
      data-testid="custom-select"
    >
      <div
        className="css-0"
      >
        <div
          className="css-13s2sfk-Heading"
        >
          subheader__sort
        </div>
      </div>
      <div
        className="css-18vooac"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="custom-select css-b62m3t-container"
          onKeyDown={[Function]}
        >
          <span
            className="css-1f43avz-a11yText-A11yText"
            id="react-select-7-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            className="css-1f43avz-a11yText-A11yText"
          />
          <div
            className=" css-1l51fcv-control"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className=" css-1fdsijx-ValueContainer"
            >
              <div
                className="single-value css-1ry7giw-singleValue"
              >
                subheader__sort_by_date
              </div>
              <input
                aria-autocomplete="list"
                aria-expanded={false}
                aria-haspopup={true}
                aria-readonly={true}
                className="css-mohuvp-dummyInput-DummyInput"
                disabled={false}
                id="react-select-7-input"
                inputMode="none"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                tabIndex={0}
                value=""
              />
            </div>
            <div
              className=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                className=" css-1uei4ir-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                className=" css-1xc3v61-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className="css-l0jg45-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-17as3x0"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="css-13s2sfk-Heading"
      >
        subheader__search
      </div>
      <div
        className="css-1unfqpo"
      >
        <input
          className="css-dga44z"
          defaultValue=""
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="rating__subheader_search_placeholder"
          type="text"
        />
        <div
          className="css-v3avn8-Icon"
          dangerouslySetInnerHTML={
            {
              "__html": {},
            }
          }
        />
      </div>
    </div>
  </div>,
  <div
    className="css-0"
  >
    <section
      className="css-14r13o9-CardOverview"
    >
      <div
        className="css-turhhn-RaterRatingOverview"
      >
        <div
          className="css-1tzcb72-Icon"
          dangerouslySetInnerHTML={
            {
              "__html": {},
            }
          }
        />
      </div>
    </section>
  </div>,
]
`;

exports[`rater-rating-overview renders correctly (no surveys) 1`] = `
[
  <div
    className="css-10gaqg9-SubHeader"
  >
    <div
      className="css-1vv8qb3"
      data-testid="custom-select"
    >
      <div
        className="css-0"
      >
        <div
          className="css-13s2sfk-Heading"
        >
          subheader__typ
        </div>
      </div>
      <div
        className="css-18vooac"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="custom-select css-b62m3t-container"
          onKeyDown={[Function]}
        >
          <span
            className="css-1f43avz-a11yText-A11yText"
            id="react-select-8-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            className="css-1f43avz-a11yText-A11yText"
          />
          <div
            className=" css-1l51fcv-control"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className=" css-1fdsijx-ValueContainer"
            >
              <div
                className="single-value css-1ry7giw-singleValue"
              >
                subheader__filter_by_all_entities
              </div>
              <input
                aria-autocomplete="list"
                aria-expanded={false}
                aria-haspopup={true}
                aria-readonly={true}
                className="css-mohuvp-dummyInput-DummyInput"
                disabled={false}
                id="react-select-8-input"
                inputMode="none"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                tabIndex={0}
                value=""
              />
            </div>
            <div
              className=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                className=" css-1uei4ir-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                className=" css-1xc3v61-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className="css-l0jg45-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-1vv8qb3"
      data-testid="custom-select"
    >
      <div
        className="css-0"
      >
        <div
          className="css-13s2sfk-Heading"
        >
          subheader__state
        </div>
      </div>
      <div
        className="css-18vooac"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="custom-select css-b62m3t-container"
          onKeyDown={[Function]}
        >
          <span
            className="css-1f43avz-a11yText-A11yText"
            id="react-select-9-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            className="css-1f43avz-a11yText-A11yText"
          />
          <div
            className=" css-1l51fcv-control"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className=" css-1fdsijx-ValueContainer"
            >
              <div
                className="single-value css-1ry7giw-singleValue"
              >
                subheader__filter_by_show_all
              </div>
              <input
                aria-autocomplete="list"
                aria-expanded={false}
                aria-haspopup={true}
                aria-readonly={true}
                className="css-mohuvp-dummyInput-DummyInput"
                disabled={false}
                id="react-select-9-input"
                inputMode="none"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                tabIndex={0}
                value=""
              />
            </div>
            <div
              className=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                className=" css-1uei4ir-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                className=" css-1xc3v61-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className="css-l0jg45-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-1vv8qb3"
      data-testid="custom-select"
    >
      <div
        className="css-0"
      >
        <div
          className="css-13s2sfk-Heading"
        >
          subheader__sort
        </div>
      </div>
      <div
        className="css-18vooac"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="custom-select css-b62m3t-container"
          onKeyDown={[Function]}
        >
          <span
            className="css-1f43avz-a11yText-A11yText"
            id="react-select-10-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            className="css-1f43avz-a11yText-A11yText"
          />
          <div
            className=" css-1l51fcv-control"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className=" css-1fdsijx-ValueContainer"
            >
              <div
                className="single-value css-1ry7giw-singleValue"
              >
                subheader__sort_by_date
              </div>
              <input
                aria-autocomplete="list"
                aria-expanded={false}
                aria-haspopup={true}
                aria-readonly={true}
                className="css-mohuvp-dummyInput-DummyInput"
                disabled={false}
                id="react-select-10-input"
                inputMode="none"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                tabIndex={0}
                value=""
              />
            </div>
            <div
              className=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                className=" css-1uei4ir-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                className=" css-1xc3v61-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className="css-l0jg45-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-17as3x0"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="css-13s2sfk-Heading"
      >
        subheader__search
      </div>
      <div
        className="css-1unfqpo"
      >
        <input
          className="css-dga44z"
          defaultValue=""
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="rating__subheader_search_placeholder"
          type="text"
        />
        <div
          className="css-v3avn8-Icon"
          dangerouslySetInnerHTML={
            {
              "__html": {},
            }
          }
        />
      </div>
    </div>
  </div>,
  <div
    className="css-0"
  >
    <section
      className="css-14r13o9-CardOverview"
    >
      <div
        className="css-turhhn-RaterRatingOverview"
      >
        <div
          className="css-16gfzy-RaterRatingOverviewPlaceholder"
        >
          <div
            className="css-1bgw1go-Heading"
          >
            rater_rating__placeholder_title
          </div>
          <div
            className="css-2c1ygk-Text"
          >
            rater_rating__placeholder_description
          </div>
        </div>
      </div>
    </section>
  </div>,
]
`;

exports[`rater-rating-overview renders correctly 1`] = `
[
  <div
    className="css-10gaqg9-SubHeader"
  >
    <div
      className="css-1vv8qb3"
      data-testid="custom-select"
    >
      <div
        className="css-0"
      >
        <div
          className="css-13s2sfk-Heading"
        >
          subheader__typ
        </div>
      </div>
      <div
        className="css-18vooac"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="custom-select css-b62m3t-container"
          onKeyDown={[Function]}
        >
          <span
            className="css-1f43avz-a11yText-A11yText"
            id="react-select-2-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            className="css-1f43avz-a11yText-A11yText"
          />
          <div
            className=" css-1l51fcv-control"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className=" css-1fdsijx-ValueContainer"
            >
              <div
                className="single-value css-1ry7giw-singleValue"
              >
                subheader__filter_by_all_entities
              </div>
              <input
                aria-autocomplete="list"
                aria-expanded={false}
                aria-haspopup={true}
                aria-readonly={true}
                className="css-mohuvp-dummyInput-DummyInput"
                disabled={false}
                id="react-select-2-input"
                inputMode="none"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                tabIndex={0}
                value=""
              />
            </div>
            <div
              className=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                className=" css-1uei4ir-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                className=" css-1xc3v61-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className="css-l0jg45-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-1vv8qb3"
      data-testid="custom-select"
    >
      <div
        className="css-0"
      >
        <div
          className="css-13s2sfk-Heading"
        >
          subheader__state
        </div>
      </div>
      <div
        className="css-18vooac"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="custom-select css-b62m3t-container"
          onKeyDown={[Function]}
        >
          <span
            className="css-1f43avz-a11yText-A11yText"
            id="react-select-3-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            className="css-1f43avz-a11yText-A11yText"
          />
          <div
            className=" css-1l51fcv-control"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className=" css-1fdsijx-ValueContainer"
            >
              <div
                className="single-value css-1ry7giw-singleValue"
              >
                subheader__filter_by_show_all
              </div>
              <input
                aria-autocomplete="list"
                aria-expanded={false}
                aria-haspopup={true}
                aria-readonly={true}
                className="css-mohuvp-dummyInput-DummyInput"
                disabled={false}
                id="react-select-3-input"
                inputMode="none"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                tabIndex={0}
                value=""
              />
            </div>
            <div
              className=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                className=" css-1uei4ir-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                className=" css-1xc3v61-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className="css-l0jg45-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-1vv8qb3"
      data-testid="custom-select"
    >
      <div
        className="css-0"
      >
        <div
          className="css-13s2sfk-Heading"
        >
          subheader__sort
        </div>
      </div>
      <div
        className="css-18vooac"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="custom-select css-b62m3t-container"
          onKeyDown={[Function]}
        >
          <span
            className="css-1f43avz-a11yText-A11yText"
            id="react-select-4-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            className="css-1f43avz-a11yText-A11yText"
          />
          <div
            className=" css-1l51fcv-control"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className=" css-1fdsijx-ValueContainer"
            >
              <div
                className="single-value css-1ry7giw-singleValue"
              >
                subheader__sort_by_date
              </div>
              <input
                aria-autocomplete="list"
                aria-expanded={false}
                aria-haspopup={true}
                aria-readonly={true}
                className="css-mohuvp-dummyInput-DummyInput"
                disabled={false}
                id="react-select-4-input"
                inputMode="none"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                tabIndex={0}
                value=""
              />
            </div>
            <div
              className=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                className=" css-1uei4ir-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                className=" css-1xc3v61-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className="css-l0jg45-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-17as3x0"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="css-13s2sfk-Heading"
      >
        subheader__search
      </div>
      <div
        className="css-1unfqpo"
      >
        <input
          className="css-dga44z"
          defaultValue=""
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="rating__subheader_search_placeholder"
          type="text"
        />
        <div
          className="css-v3avn8-Icon"
          dangerouslySetInnerHTML={
            {
              "__html": {},
            }
          }
        />
      </div>
    </div>
  </div>,
  <div
    className="css-0"
  >
    <section
      className="css-14r13o9-CardOverview"
    >
      <div
        className="css-kidgv3-RaterRatingOverview"
      >
        <div
          className="css-k90k9v-Card"
          onClick={[Function]}
        >
          <div
            className="card-header css-t2sgx-CardHeader"
          >
            <div
              className="css-1sbf56p-Text"
            >
              my test scenario
            </div>
            <div
              className="css-17zbm7y-Text"
            >
              rater_rating__status_rating_completed
            </div>
          </div>
          <div
            className="card-content css-mmcfsy-CardContent"
          >
            <div
              className="css-yzker2-RatersRatingCardContent"
            >
              <div
                className="css-fmthw-Text"
              >
                description
              </div>
            </div>
            <div
              className="css-7xaisz-RatersRatingCardContent"
            >
              <div
                className="css-fmthw-Text"
              >
                rater_rating__info_box_title:
              </div>
              <div
                className="css-1npum18-RatersRatingCardContent"
              >
                <div
                  className="css-hcuxk4-RatersRatingCardContent"
                >
                  <div
                    className="css-l0jg45-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                  <div
                    className="css-1du93n7-Text"
                  >
                    projects__surveys_details_dashboard_participants
                  </div>
                </div>
                <div
                  className="css-hcuxk4-RatersRatingCardContent"
                >
                  <div
                    className="css-l0jg45-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                  <div
                    className="css-1du93n7-Text"
                  >
                    projects__surveys_details_progress_automatic
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-0"
            id="tooltip_42"
          >
            <div
              className="card-footer css-1afjeap-CardFooter"
            >
              <div
                className="css-haffc0-RatersRatingCardFooter"
              >
                <div
                  className="css-gb1brp-ProgressBarColumn"
                >
                  <div
                    className="css-kr258m-ProgressBarColumn"
                  >
                    <div
                      className="progress-element css-2mfb61-ProgressBarColumn"
                    />
                  </div>
                </div>
                <div
                  className="css-haffc0-RatersRatingCardFooter"
                >
                  <div
                    className="css-qcf7xd-Text"
                  >
                    percentage
                  </div>
                  <div
                    className="css-l0jg45-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-k90k9v-Card"
          onClick={[Function]}
        >
          <div
            className="card-header css-t2sgx-CardHeader"
          >
            <div
              className="css-1sbf56p-Text"
            >
              my test scenario
            </div>
            <div
              className="css-17zbm7y-Text"
            >
              rater_rating__status_rating_completed
            </div>
          </div>
          <div
            className="card-content css-mmcfsy-CardContent"
          >
            <div
              className="css-yzker2-RatersRatingCardContent"
            >
              <div
                className="css-fmthw-Text"
              >
                description
              </div>
            </div>
            <div
              className="css-7xaisz-RatersRatingCardContent"
            >
              <div
                className="css-fmthw-Text"
              >
                rater_rating__info_box_title:
              </div>
              <div
                className="css-1npum18-RatersRatingCardContent"
              >
                <div
                  className="css-hcuxk4-RatersRatingCardContent"
                >
                  <div
                    className="css-l0jg45-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                  <div
                    className="css-1du93n7-Text"
                  >
                    projects__surveys_details_dashboard_participants
                  </div>
                </div>
                <div
                  className="css-hcuxk4-RatersRatingCardContent"
                >
                  <div
                    className="css-l0jg45-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                  <div
                    className="css-1du93n7-Text"
                  >
                    projects__surveys_details_progress_automatic
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-0"
            id="tooltip_42"
          >
            <div
              className="card-footer css-1afjeap-CardFooter"
            >
              <div
                className="css-haffc0-RatersRatingCardFooter"
              >
                <div
                  className="css-gb1brp-ProgressBarColumn"
                >
                  <div
                    className="css-kr258m-ProgressBarColumn"
                  >
                    <div
                      className="progress-element css-2mfb61-ProgressBarColumn"
                    />
                  </div>
                </div>
                <div
                  className="css-haffc0-RatersRatingCardFooter"
                >
                  <div
                    className="css-qcf7xd-Text"
                  >
                    percentage
                  </div>
                  <div
                    className="css-l0jg45-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>,
]
`;
